--- a/style.css
+++ b/style.css
@@ -8,96 +8,416 @@ Author URI: http://www.mundosa.com.br
 @import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,300,800);
 
 body {
-	margin: 0;
-	padding: 0; 
+	font-family: 'Open Sans Condensed', sans-serif !important;
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
 header {
 	width: 100%;
-	height: 160px;
+	height: 140px;
 	background-color: #FFF;
 	opacity: 0.8;
 	z-index: 99;
 	position: fixed;
 }
 footer {
-	height: 380px;
+	min-height: 380px;
+	height: auto;
 	background-color: #000;
 }
-#stage {
-	position: absolute;
-	width: 100%;
-	height: 100%;
+footer p {
+	font-size: 1em;
+	color: #FFF;
 }
-.conteudo {
-	width: 952px; 
-	margin: 0 auto;
+footer a {
+	font-size: 1.4em;
+	color: #FFF !important;
 }
-.banner_top {
+footer a:hover {
+	color: #fbbb04;
+	text-decoration: none;
+}
+#logo {
+	width: 180px;
+	padding: 20px 0;
+}
+#banner_top {
 	height: 810px;
 	background: url("../vcl_theme/img/banner_top.jpg") center;
+	padding-top: 190px;
 }
-.banner_top_text {
-	font-family: 'Open Sans Condensed', sans-serif;
+#banner_top p {
+	width: 600px;
 	font-weight: 700;
 	font-size: 10em;
 	line-height: 1em;
 	color: #636363;
 	text-align: right;
+	float: right;
+}
+#banner_box_text {
+	color: #000 !important;
 }
 .segmento {
-	height: 560px;
+	height: 800px;
 	background-color: #464646;
 }
-.segmento_text {
-	font-family: 'Open Sans Condensed', sans-serif;
+.segmento_box {
+	width: 700px;
+	margin: 50px auto;
+	padding: 30px 0;
+
 	font-weight: 700;
 	font-size: 8em;
 	line-height: 1.1em;
 	color: #FFF;
 	text-align: left;
+
+}
+#segmento_text_1 {
+	background: url("../vcl_theme/img/icon_residencial.png") no-repeat left;
+
+	padding-left: 115px;
+}
+#segmento_text_2 {
+	background: url("../vcl_theme/img/icon_condominial.png") no-repeat left;
+
+	padding-left: 115px;
+}
+#segmento_text_3 {
+	background: url("../vcl_theme/img/icon_comercial.png") no-repeat left;
+
+	padding-left: 115px;
 }
 .atuacao {
-	height: 600px;
+	height: 800px;
 	background-color: #FFF;
 }
-.atuacao_text {
-	font-family: 'Open Sans Condensed', sans-serif;
+.atuacao_box {
+	width: 770px;
+	margin: 80px auto;
+	padding: 40px 0;
+}
+#atuacao_box_title {
 	font-size: 8em;
 	color: #fbbb04;
 }
-.atuacao_text_1 {
-	font-family: 'Open Sans Condensed', sans-serif;
+#atuacao_box_text {
 	font-weight: 700;
 	font-size: 2em;
 	line-height: 1.9em;
 	color: #636363;
 }
 .servicos {
-	height: 900px;
-	background: url("../vcl_theme/img/bg_servicos.jpg") center;
+	min-height: 1000px;
+	height: auto;
+	background: url("../vcl_theme/img/bg_servicos.jpg") no-repeat center;
 }
-.servicos_titulo{
-	font-family: 'Open Sans Condensed', sans-serif;
+.servicos h2 {
 	font-size: 6em;
 	color: #fbbb04;
-	text-align: center;
 }
 .servicos_box {
-    width:32%;
-    height:100%;
-    position:relative;
-    float:left;
+	width: 660px;
+	margin: 160px auto;
+   
 }
-.servicos p {
-	font-family: 'Open Sans Condensed', sans-serif;
+.servicos_box h3 {
 	font-size: 1em;
 	font-weight: 700;
 	color: #fbbb04;
-	/*text-align: left;*/
+	margin: 90px 0 10px 0;
+	width: 90px;
 }
-.servicos_descricao {
-	font-family: 'Open Sans Condensed', sans-serif !important;
-	font-size: 1em !important;
-	font-weight: 300 !important;
+.servicos_box p, .servicos_box ul {
+	font-size: 1em;
+	font-weight: 300;
+	color: #FFF;
+	width: 150px;
+}
+.servicos_box li  {
+    margin-left: -23px;
+}
+.servicos_alin {
+	display: inline-block;
+	margin: 25px 55px 35px 0;
+}
+#servicos_box_text_1 {
+	background: url("../vcl_theme//img/icon_energia.png") no-repeat top left;
+}
+#servicos_box_text_2 {
+	background: url("../vcl_theme//img/icon_infraestrutura.png") no-repeat top left;
+}
+#servicos_box_text_3 {
+	background: url("../vcl_theme//img/icon_eletrica.png") no-repeat top left;
+}
+#servicos_box_text_3 p {	
+	width: 180px;
+}
+#servicos_box_text_4 {
+	background: url("../vcl_theme//img/icon_execucao.png") no-repeat top left;
+}
+#servicos_box_text_4 ul {	
+	width: 200px;
+}
+#servicos_box_text_5 {
+	background: url("../vcl_theme//img/icon_projetos.png") no-repeat top left;
+}
+#servicos_box_text_5 ul {	
+	width: 290px;
+}
+#servicos_box_text_5 h3 {	
+	width: 150px;
+}
+.footer_box {
+	margin: 70px auto;
+	width: 600px;
+}
+.footer_box p {
+	width: 200px;
+}
+#footer_logo {
+	width: 100px;
+	padding-bottom: 10px;
+}
+#footer_box_left {
+	display: inline-block;
+	margin: 0px 130px 0 0;
+}
+#footer_box_right {
+	display: inline-block;	
+}
+#footer_tel {
+	font-size: 2em;
+	font-weight: 700;
+	color: #fbbb04;
+	margin-bottom: -10px;
+}
+.banner_obras_andamento {
+	height: 520px;
+	background: url("../vcl_theme/img/bg_obras.jpg") center;
+}
+.banner_obras_realizadas {
+	height: 520px;
+	background: url("../vcl_theme/img/bg_obras.jpg") center;
+}
+.post {
+	background-color: #464646;
+}
+.post-title a {
+    color: #fbbb04;
+    text-decoration: none;
+}
+.post-title a:focus, a:hover {
+    color: #fbbb04 !important;
+    text-decoration: none !important;
+}
+.post-text {
+	color: #FFF;
+	padding-right: 15px;
+}
+.post-text .btn-primary {
+    color: #464646;
+    background-color: #fbbb04;
+    border-color: #fbbb04;
+}
+.post-text .btn {
+    padding: 5px 25px !important;
+    border: 0px none !important;
+    border-radius: 0px !important;
+    margin: 30px 0;
+    font-size: 1.3em;
+    font-weight: 700 !important;
+}
+.btn:hover {
 	color: #FFF !important;
+    background-color: #fbbb04 !important;
+    border-color: #fbbb04 !important;
+}
+}
+.post-content {
+	width: 920px;
+}
+.thumb {
+	background-color: #fbbb04;
+	width: 229px;
+	height: 208px;
+	float: left;
+	margin: 0px 40px 0px 0px;
+}
+.arrow_left {
+    position: absolute;
+    width: 229px;
+    height: 70px;
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent;
+    border-right: 40px solid #464646;
+    margin-top: 70px;
+}
+/*Formulário*/
+.form-control {
+	color: #FFF !important;
+    border-radius: 0px !important;
+    background-color: #FFF;
+	border: 0 !important;
+	box-shadow: 0 !important;
+	background-color: #636363 !important;
+}
+.input-lg {
+    height: 30px !important;
+    padding: 5px 5px !important;
+    font-size: 13px !important;
+}
+.form-group {
+    margin-bottom: 5px !important;
+    width: 270px !important;
+}
+.btn {
+    padding: 3px 38px !important;
+    border: 0 !important;
+	border-radius: 0 !important;
+	margin-top: 12px;
+	margin-left: 166px;
+}
+.btn-danger {
+    background-color: #fbbb04 !important;
+    border-color: #fbbb04 !important;
+}
+.alert {
+    border: 0 !important;
+    border-radius: 0 !important;
+}
+.alert-success {
+    color: #FFF !important;
+    background-color: #636363 !important;
+    border-color: #636363 !important;
+}
+.alert-success .alert-link {
+    color: #FFF !important;
+    font-size: 1em !important;
+}
+/*Menu*/
+#navigation {
+	float: right;
+	padding: 40px 0;
+}
+#navigation ul {
+	list-style:none;
+	margin:0;
+	padding:1px 0;
+}
+#navigation ul li{
+	float:left;
+}
+/* ===== First Level ===== */				
+#navigation ul li {
+	position:relative;
+	padding:0;
+	margin:0;
+	border-right:0;
+	background: transparent;
+}
+#navigation ul ul li {
+	border:none;
+	background: #000;
+}
+#navigation ul li a {
+	display:block;
+	text-decoration:none;
+	font-size:26px;
+	color:#636363;
+	padding:0 30px;
+	line-height:43px;
+}
+#navigation ul li:hover a {
+	position:relative;
+	background:#000;
+	color:#fff;
+}
+#navigation ul ul,	#navigation ul li:hover ul ul {
+	position:absolute;
+	display:none;
+}
+#navigation ul ul li:hover ul,		#navigation ul li:hover ul li:hover ul {
+	display:block;
+	top:0px;
+	left: 100%;
+}
+/* ===== Second and Third Level ===== */
+#navigation ul li:hover ul {
+	display:block;
+	position:absolute;
+	left:0;
+	top:100%;
+	width:auto;
+	height:auto;
+	margin:0;
+	padding:0;
+}
+#navigation ul ul {
+	background:#777;
+}
+#navigation ul ul li a {
+	float:none;
+	width:180px;
+	line-height:normal;
+	font-variant:normal;
+	font-weight:normal;
+	color:#fff;
+	text-transform:none;
+	padding:10px 29px;
+	background:none !important;
+}
+#navigation ul ul li:hover>a {
+	background:#fbbb04 !important;
+	color:#FFF !important;
+}
+/*medias*/
+@media screen and (max-width:320px) { }
+@media screen and (max-width:480px) {
+}
+@media screen and (max-width:768px) { 
+	.menu { 
+		display: none;
+	}
+	#navigation ul {
+		margin-right: 50px;
+	}
+	#banner_top p {
+		font-size: 8em !important;
+	}
+	.footer_box {
+  		width: 300px;
+  	}
+	#footer_box_right {
+  		margin: 10px 15px;
+  	}
+  	.servicos {
+  		background: #464646;
+	}
+  	.servicos_box {
+    	width: 260px;
+    	margin: 50px auto;
+    }
+    #servicos_box_text_1 {
+		background-position: center top;
+	}
+	#servicos_box_text_2 {
+		background-position: center top;
+	}
+	#servicos_box_text_3 {
+		background-position: center top;
+	}
+	#servicos_box_text_4 {
+		background-position: center top;
+	}
+	#servicos_box_text_5 {
+		background-position: center top;
+	}
+}
+@media screen and (max-width:992px) {
+	/*#banner_top p {
+		font-size: 9em;
+	}*/
 }
