--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
 header {
 	width: 100%;
 	height: 140px;
-	background-color: #FFF;
-	opacity: 0.8;
+	/*background-color: #FFF;
+	opacity: 0.8;*/
 	z-index: 99;
 	position: fixed;
 }
@@ -43,8 +43,13 @@ footer a:hover {
 	padding: 20px 0;
 }
 #banner_top {
-	height: 810px;
-	background: url("../vcl_theme/img/banner_top.jpg") center;
+	/*min-height: 810px;
+	height: auto;*/
+	background: url("../vcl_theme/img/banner_top.jpg") no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 	padding-top: 190px;
 }
 #banner_top p {
@@ -60,7 +65,8 @@ footer a:hover {
 	color: #000 !important;
 }
 .segmento {
-	height: 800px;
+	min-height: 800px;
+	height: auto;
 	background-color: #464646;
 }
 .segmento_box {
@@ -77,27 +83,24 @@ footer a:hover {
 }
 #segmento_text_1 {
 	background: url("../vcl_theme/img/icon_residencial.png") no-repeat left;
-
 	padding-left: 115px;
 }
 #segmento_text_2 {
 	background: url("../vcl_theme/img/icon_condominial.png") no-repeat left;
-
 	padding-left: 115px;
 }
 #segmento_text_3 {
 	background: url("../vcl_theme/img/icon_comercial.png") no-repeat left;
-
 	padding-left: 115px;
 }
 .atuacao {
-	height: 800px;
+	min-height: 800px;
+	height: auto;
 	background-color: #FFF;
 }
 .atuacao_box {
-	width: 770px;
-	margin: 80px auto;
-	padding: 40px 0;
+	width: 700px;
+	margin-top: 130px;
 }
 #atuacao_box_title {
 	font-size: 8em;
@@ -197,13 +200,35 @@ footer a:hover {
 .banner_obras_andamento {
 	height: 520px;
 	background: url("../vcl_theme/img/bg_obras.jpg") center;
+	padding-top: 200px
+}
+.banner_obras_andamento p {
+	width: 700px;
+	font-weight: 700;
+	font-size: 10em;
+	line-height: 1em;
+	color: #636363;
+	text-align: right;
+	float: right;
 }
 .banner_obras_realizadas {
 	height: 520px;
 	background: url("../vcl_theme/img/bg_obras.jpg") center;
+	padding-top: 200px
+}
+.banner_obras_realizadas p {
+	width: 650px;
+	font-weight: 700;
+	font-size: 10em;
+	line-height: 1em;
+	color: #636363;
+	text-align: right;
+	float: right;
 }
 .post {
 	background-color: #464646;
+	width: 970px;
+    margin: 0 auto;
 }
 .post-title a {
     color: #fbbb04;
@@ -241,8 +266,8 @@ footer a:hover {
 }
 .thumb {
 	background-color: #fbbb04;
-	width: 229px;
-	height: 208px;
+	width: 228px;
+	height: 228px;
 	float: left;
 	margin: 0px 40px 0px 0px;
 }
@@ -254,6 +279,12 @@ footer a:hover {
     border-bottom: 40px solid transparent;
     border-right: 40px solid #464646;
     margin-top: 70px;
+}
+#single_box {
+	padding: 160px 15px 15px 7px;
+}
+#single_box p {
+	font-size: 20px !important;
 }
 /*Formulário*/
 .form-control {
@@ -298,18 +329,50 @@ footer a:hover {
     font-size: 1em !important;
 }
 /*Menu*/
-#navigation {
-	float: right;
-	padding: 40px 0;
+.navbar-default {
+  	border-color: transparent;
+  	background-color: #FFF !important;
+	opacity: 0.8 !important;
+}
+.navbar-nav {
+	margin-top: 50px !important;
+    float: right !important;
+    z-index: 100 !important;
+}
+.navbar-nav>.active>a {
+	background-color: transparent !important;
+}
+.navbar-nav>.active>a:hover {
+	background-color: #000 !important;
+}
+.dropdown-menu {
+	border: none !important;
+	border-radius: none !important;
+	box-shadow: none !important;
+}
+.navbar-toggle {
+		position: relative !important;
+		float: right !important;
+		padding: 10px 10px !important;
+		background-image: none !important;
+		/*border: 1px solid transparent !important;*/
+		border-radius: 1px !important;
+		margin-top: -80px !important;
+		/*background-color: #6C1F1F !important;*/
+		margin-right: 15px !important;
+		margin-bottom: 0px !important;
+	}
+.navbar-collapse {
+    border-top: 0px none !important;
 }
 #navigation ul {
 	list-style:none;
-	margin:0;
+	/*margin:0;*/
 	padding:1px 0;
 }
-#navigation ul li{
+/*#navigation ul li{
 	float:left;
-}
+}*/
 /* ===== First Level ===== */				
 #navigation ul li {
 	position:relative;
@@ -327,7 +390,7 @@ footer a:hover {
 	text-decoration:none;
 	font-size:26px;
 	color:#636363;
-	padding:0 30px;
+	padding:0 15px;
 	line-height:43px;
 }
 #navigation ul li:hover a {
@@ -352,7 +415,7 @@ footer a:hover {
 	top:100%;
 	width:auto;
 	height:auto;
-	margin:0;
+	/*margin:0;*/
 	padding:0;
 }
 #navigation ul ul {
@@ -360,32 +423,71 @@ footer a:hover {
 }
 #navigation ul ul li a {
 	float:none;
-	width:180px;
+	/*width:180px;*/
 	line-height:normal;
 	font-variant:normal;
 	font-weight:normal;
 	color:#fff;
 	text-transform:none;
-	padding:10px 29px;
+	padding:3px 29px;
 	background:none !important;
 }
 #navigation ul ul li:hover>a {
-	background:#fbbb04 !important;
+	background: #fbbb04 !important;
 	color:#FFF !important;
 }
 /*medias*/
 @media screen and (max-width:320px) { }
 @media screen and (max-width:480px) {
+	#atuacao_box_title {
+  		font-size: 6em;
+  	}
+  	#atuacao_box_text {
+  		font-size: 1.5em;
+  	}
+  	.atuacao_box {
+    	width: 300px !important;
+    	margin: 40px 0 20px 0;
+    }
+    .segmento_box {
+	  font-size: 2.8em !important;
+	}
+	#banner_top p {
+		width: 340px !important;
+		font-size: 4em !important;
+		padding-right: 0;
+	}
+	.banner_obras_andamento {
+		height: 290px !important;
+	}
+	.banner_obras_andamento p {
+		font-size: 4em !important;
+	}
+	.banner_obras_realizadas {
+		height: 290px !important;
+	}
+	.banner_obras_realizadas p {
+		font-size: 4em !important;
+	}
+	.post {
+		width: 350px !important;
+	}
+	.thumb {
+        width: 350px;
+    }
+    .post-text {
+        padding-left: 18px;
+    }
+    .arrow_left {
+    	display: none;
+    }
+    .segmento {
+    	min-height: 660px;
+    }
 }
 @media screen and (max-width:768px) { 
 	.menu { 
 		display: none;
-	}
-	#navigation ul {
-		margin-right: 50px;
-	}
-	#banner_top p {
-		font-size: 8em !important;
 	}
 	.footer_box {
   		width: 300px;
@@ -415,9 +517,57 @@ footer a:hover {
 	#servicos_box_text_5 {
 		background-position: center top;
 	}
+	#banner_top p {
+		width: 370px;
+		font-size: 6em;
+	}
+	.banner_obras_andamento {
+		background: #FFF;
+		height: 340px;
+		padding-top: 140px;
+	}
+	.banner_obras_andamento p {
+		width: 430px;
+		font-size: 6em;
+	}
+	.banner_obras_realizadas {
+		background: #FFF;
+		height: 340px;
+		padding-top: 140px;
+	}
+	.banner_obras_realizadas p {
+		width: 430px;
+		font-size: 6em;
+	}
+	.navbar-nav {
+	    margin-top: 0px !important;
+	    float: none !important;
+	    text-align: center !important;
+	}
+	#navigation ul li:hover ul {
+		position: relative;
+		width: 100%;
+		text-align: center;
+	}
+	.post {
+		width: 600px;
+	}
+	.post-text .btn {
+		margin: 10px 0;
+	}
 }
 @media screen and (max-width:992px) {
-	/*#banner_top p {
-		font-size: 9em;
+	.segmento_box {
+	  font-size: 5em;
+	}
+/*	.thumb {
+		width: 300px !important;
+		height: 268px !important;
+	}*/
+}
+@media screen and (max-width:1200px) {
+	/*.thumb {
+		width: 260px;
+		height: 228px;
 	}*/
 }
