--- a/style.css
+++ b/style.css
@@ -16,8 +16,6 @@ body {
 header {
 	width: 100%;
 	height: 140px;
-	/*background-color: #FFF;
-	opacity: 0.8;*/
 	z-index: 99;
 	position: fixed;
 }
@@ -43,8 +41,6 @@ footer a:hover {
 	padding: 20px 0;
 }
 #banner_top {
-	/*min-height: 810px;
-	height: auto;*/
 	background: url("../vcl_theme/img/banner_top.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -124,7 +120,7 @@ footer a:hover {
 .servicos_box {
 	width: 660px;
 	margin: 160px auto;
-   
+
 }
 .servicos_box h3 {
 	font-size: 1em;
@@ -140,7 +136,7 @@ footer a:hover {
 	width: 150px;
 }
 .servicos_box li  {
-    margin-left: -23px;
+	margin-left: -23px;
 }
 .servicos_alin {
 	display: inline-block;
@@ -228,38 +224,41 @@ footer a:hover {
 .post {
 	background-color: #464646;
 	width: 970px;
-    margin: 0 auto;
+	height: 228px;
+	margin: 20px auto;
+}
+.post-title {
+	padding: 15px;
 }
 .post-title a {
-    color: #fbbb04;
-    text-decoration: none;
+	color: #fbbb04;
+	text-decoration: none;
 }
 .post-title a:focus, a:hover {
-    color: #fbbb04 !important;
-    text-decoration: none !important;
+	color: #fbbb04 !important;
+	text-decoration: none !important;
 }
 .post-text {
 	color: #FFF;
 	padding-right: 15px;
 }
 .post-text .btn-primary {
-    color: #464646;
-    background-color: #fbbb04;
-    border-color: #fbbb04;
+	color: #464646;
+	background-color: #fbbb04;
+	border-color: #fbbb04;
 }
 .post-text .btn {
-    padding: 5px 25px !important;
-    border: 0px none !important;
-    border-radius: 0px !important;
-    margin: 30px 0;
-    font-size: 1.3em;
-    font-weight: 700 !important;
+	padding: 5px 25px !important;
+	border: 0px none !important;
+	border-radius: 0px !important;
+	margin: 30px 0;
+	font-size: 1.3em;
+	font-weight: 700 !important;
 }
 .btn:hover {
 	color: #FFF !important;
-    background-color: #fbbb04 !important;
-    border-color: #fbbb04 !important;
-}
+	background-color: #fbbb04 !important;
+	border-color: #fbbb04 !important;
 }
 .post-content {
 	width: 920px;
@@ -272,13 +271,13 @@ footer a:hover {
 	margin: 0px 40px 0px 0px;
 }
 .arrow_left {
-    position: absolute;
-    width: 229px;
-    height: 70px;
-    border-top: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-    border-right: 40px solid #464646;
-    margin-top: 70px;
+	position: absolute;
+	width: 229px;
+	height: 70px;
+	border-top: 40px solid transparent;
+	border-bottom: 40px solid transparent;
+	border-right: 40px solid #464646;
+	margin-top: 70px;
 }
 #single_box {
 	padding: 160px 15px 15px 7px;
@@ -289,55 +288,55 @@ footer a:hover {
 /*Formulário*/
 .form-control {
 	color: #FFF !important;
-    border-radius: 0px !important;
-    background-color: #FFF;
+	border-radius: 0px !important;
+	background-color: #FFF;
 	border: 0 !important;
 	box-shadow: 0 !important;
 	background-color: #636363 !important;
 }
 .input-lg {
-    height: 30px !important;
-    padding: 5px 5px !important;
-    font-size: 13px !important;
+	height: 30px !important;
+	padding: 5px 5px !important;
+	font-size: 13px !important;
 }
 .form-group {
-    margin-bottom: 5px !important;
-    width: 270px !important;
+	margin-bottom: 5px !important;
+	width: 270px !important;
 }
 .btn {
-    padding: 3px 38px !important;
-    border: 0 !important;
+	padding: 3px 38px !important;
+	border: 0 !important;
 	border-radius: 0 !important;
 	margin-top: 12px;
 	margin-left: 166px;
 }
 .btn-danger {
-    background-color: #fbbb04 !important;
-    border-color: #fbbb04 !important;
+	background-color: #fbbb04 !important;
+	border-color: #fbbb04 !important;
 }
 .alert {
-    border: 0 !important;
-    border-radius: 0 !important;
+	border: 0 !important;
+	border-radius: 0 !important;
 }
 .alert-success {
-    color: #FFF !important;
-    background-color: #636363 !important;
-    border-color: #636363 !important;
+	color: #FFF !important;
+	background-color: #636363 !important;
+	border-color: #636363 !important;
 }
 .alert-success .alert-link {
-    color: #FFF !important;
-    font-size: 1em !important;
+	color: #FFF !important;
+	font-size: 1em !important;
 }
 /*Menu*/
 .navbar-default {
-  	border-color: transparent;
-  	background-color: #FFF !important;
+	border-color: transparent;
+	background-color: #FFF !important;
 	opacity: 0.8 !important;
 }
 .navbar-nav {
 	margin-top: 50px !important;
-    float: right !important;
-    z-index: 100 !important;
+	float: right !important;
+	z-index: 100 !important;
 }
 .navbar-nav>.active>a {
 	background-color: transparent !important;
@@ -351,28 +350,22 @@ footer a:hover {
 	box-shadow: none !important;
 }
 .navbar-toggle {
-		position: relative !important;
-		float: right !important;
-		padding: 10px 10px !important;
-		background-image: none !important;
-		/*border: 1px solid transparent !important;*/
-		border-radius: 1px !important;
-		margin-top: -80px !important;
-		/*background-color: #6C1F1F !important;*/
-		margin-right: 15px !important;
-		margin-bottom: 0px !important;
-	}
+	position: relative !important;
+	float: right !important;
+	padding: 10px 10px !important;
+	background-image: none !important;
+	border-radius: 1px !important;
+	margin-top: -80px !important;
+	margin-right: 15px !important;
+	margin-bottom: 0px !important;
+}
 .navbar-collapse {
-    border-top: 0px none !important;
+	border-top: 0px none !important;
 }
 #navigation ul {
 	list-style:none;
-	/*margin:0;*/
 	padding:1px 0;
 }
-/*#navigation ul li{
-	float:left;
-}*/
 /* ===== First Level ===== */				
 #navigation ul li {
 	position:relative;
@@ -415,7 +408,6 @@ footer a:hover {
 	top:100%;
 	width:auto;
 	height:auto;
-	/*margin:0;*/
 	padding:0;
 }
 #navigation ul ul {
@@ -423,7 +415,6 @@ footer a:hover {
 }
 #navigation ul ul li a {
 	float:none;
-	/*width:180px;*/
 	line-height:normal;
 	font-variant:normal;
 	font-weight:normal;
@@ -437,20 +428,19 @@ footer a:hover {
 	color:#FFF !important;
 }
 /*medias*/
-@media screen and (max-width:320px) { }
 @media screen and (max-width:480px) {
 	#atuacao_box_title {
-  		font-size: 6em;
-  	}
-  	#atuacao_box_text {
-  		font-size: 1.5em;
-  	}
-  	.atuacao_box {
-    	width: 300px !important;
-    	margin: 40px 0 20px 0;
-    }
-    .segmento_box {
-	  font-size: 2.8em !important;
+		font-size: 6em;
+	}
+	#atuacao_box_text {
+		font-size: 1.5em;
+	}
+	.atuacao_box {
+		width: 300px !important;
+		margin: 40px 0 20px 0;
+	}
+	.segmento_box {
+		font-size: 2.8em !important;
 	}
 	#banner_top p {
 		width: 340px !important;
@@ -473,36 +463,40 @@ footer a:hover {
 		width: 350px !important;
 	}
 	.thumb {
-        width: 350px;
-    }
-    .post-text {
-        padding-left: 18px;
-    }
-    .arrow_left {
-    	display: none;
-    }
-    .segmento {
-    	min-height: 660px;
-    }
+		width: 350px;
+		display: none;
+	}
+	.post-text {
+		padding-left: 18px;
+	}
+	.arrow_left {
+		display: none;
+	}
+	.segmento {
+		min-height: 660px;
+	}
+	.post-content {
+	  width: 350px !important
+	}
 }
 @media screen and (max-width:768px) { 
 	.menu { 
 		display: none;
 	}
 	.footer_box {
-  		width: 300px;
-  	}
-	#footer_box_right {
-  		margin: 10px 15px;
-  	}
-  	.servicos {
-  		background: #464646;
+		width: 300px;
 	}
-  	.servicos_box {
-    	width: 260px;
-    	margin: 50px auto;
-    }
-    #servicos_box_text_1 {
+	#footer_box_right {
+		margin: 10px 15px;
+	}
+	.servicos {
+		background: #464646;
+	}
+	.servicos_box {
+		width: 260px;
+		margin: 50px auto;
+	}
+	#servicos_box_text_1 {
 		background-position: center top;
 	}
 	#servicos_box_text_2 {
@@ -540,9 +534,9 @@ footer a:hover {
 		font-size: 6em;
 	}
 	.navbar-nav {
-	    margin-top: 0px !important;
-	    float: none !important;
-	    text-align: center !important;
+		margin-top: 0px !important;
+		float: none !important;
+		text-align: center !important;
 	}
 	#navigation ul li:hover ul {
 		position: relative;
@@ -552,22 +546,15 @@ footer a:hover {
 	.post {
 		width: 600px;
 	}
+	.post-content {
+  		width: 590px;
+	}
 	.post-text .btn {
 		margin: 10px 0;
 	}
 }
 @media screen and (max-width:992px) {
 	.segmento_box {
-	  font-size: 5em;
+		font-size: 5em;
 	}
-/*	.thumb {
-		width: 300px !important;
-		height: 268px !important;
-	}*/
-}
-@media screen and (max-width:1200px) {
-	/*.thumb {
-		width: 260px;
-		height: 228px;
-	}*/
 }
